--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>🎨 اضغطي لتغيير اللون!</h1>
-  <button id="changeColorBtn">غيّري اللون</button>
+  <button id="changeColorBtn">change color</button>
 
   <script src="app.js"></script>
 </body>
