--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎨 اضغطي لتغيير اللون!</h1>
+  <h1>🎨 love</h1>
   <button id="changeColorBtn">change color</button>
 
   <script src="app.js"></script>
